<resources>
    <string name="app_name">netID SDK Demo</string>

    <string name="net_id_service">netID Service</string>
    <string name="net_id_service_permission_title">Permission Management</string>
    <string name="net_id_service_permission_api_version">API Version:</string>
    <string name="net_id_service_initialize">SDK initialisieren</string>
    <string name="net_id_service_authorize">Authorisieren</string>
    <string name="net_id_service_load_user_info">UserInfo laden</string>
    <string name="net_id_service_load_permissions">Laden</string>
    <string name="net_id_service_load_update_permissions">Aktualisieren</string>
    <string name="net_id_service_set_access_token">Abgelaufenes access token setzen</string>
    <string name="net_id_service_end_session">Session beenden</string>
    <string name="net_id_service_logs">Logs:\n\n</string>
    <string name="net_id_service_auth_permission">Permission</string>
    <string name="net_id_service_auth_login">Login</string>
    <string name="net_id_service_auth_login_permission">Login + Permission</string>
    <string name="net_id_service_choose_auth_way">Bitte wähle Deinen Authorisierungsprozess.</string>
    <string name="net_id_service_extra_claims">Zusätzliche <i>optional claims</i> für Login-Flow</string>
    <string name="network_error_alert_title">Netzwerkfehler</string>
    <string name="network_error_alert_description">Bitte stelle sicher, dass eine Netzwerkverbindung besteht.</string>
    <string name="network_error_alert_action">Verstanden</string>

    <!-- Content descriptions -->
    <string name="service_logo_content_description">netID logo</string>
</resources>
